fix delete-btn shrinking when todo text gets too long

--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -341,6 +341,9 @@ main .text-wrapper {
   z-index: -1;
   border-radius: 50%;
 }
+.todo-list .delete-btn {
+  flex-shrink: 0;
+}
 @media (min-width: 48rem) {
   .todo-list .complete-btn {
     height: 24px;
